<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TuxRemote</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="default_label_item">default text item</string>
    <string name="action_global_volume">Volume</string>
    <string name="action_restart">Redémarrer</string>
    <string name="action_shutdown">Eteindre</string>
    <string name="action_kill_all">Fermer toutes les app</string>
    <string name="action_add_server">Ajouter un server</string>
    <string name="cmd_icon">cmd icon</string>
    <string name="app_header_description">app header image</string>
    <string name="label_name">Nom</string>
    <string name="label_ip">ip</string>
    <string name="label_password">mot de passe</string>
    <string name="add_server_button">Ajouter</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Annuler</string>
    <string name="save_password">Sauvegarder les mots de passe</string>
    <string name="save_password_off">Non sauvegardés</string>
    <string name="save_password_title">Mots de passe</string>
    <string name="save_password_on">Sauvegardés</string>
    <string name="label_user_id">identifiant</string>
    <string name="manage_server_valid">Modifier</string>
    <string name="action_remove_all_server">Remove all server</string>
    <string name="empty_fragment">Glisser du bord gauche vers la droite pour voir les applications lancées.</string>
    <string name="pref_app_name">Préférences</string>
    <string name="action_deconnexion">Déconnexion</string>
    <string name="alert_label">Alert Dialog</string>
    <string name="wifi_error">Pas de connexion Wi-Fi.</string>
    <string name="no_shutdown_cmd">Error: shutdownCmd is null</string>
    <string name="no_volume_cmd">Error: (set/get)volumeCmd</string>
    <string name="file_selector_home">Dossier par défaut pour l\'explorateur de fichiers</string>
    <string name="default_file_selector_home" />
    <string name="title_file_selector_home">Choisir le dossier par défaut</string>
    <string name="auto_connect_off">pas de connection automatique</string>
    <string name="auto_connect_on">Connection automatique au premier serveur qui repond</string>
    <string name="auto_connect_title">Connection auto</string>
    <string name="interval_volume_summary">Monter/Baisser le volume de ...</string>
    <string name="button_volume_on">Les boutons de volume sont utilisables</string>
    <string name="button_volume_off">Les boutons de volume gardent leurs fonctionnalitées de base</string>

</resources>
