<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp">
    <EditText
        android:id="@+id/entry_name"
        android:textSize="16sp"
        android:hint="@string/label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textAutoCorrect|textCapSentences"/>
    <EditText
        android:id="@+id/entry_ip"
        android:textSize="16sp"
        android:hint="@string/label_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textAutoCorrect|textCapSentences"
        android:layout_below="@id/entry_name"/>
    <EditText
        android:id="@+id/entry_user_id"
        android:textSize="16sp"
        android:hint="@string/label_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textAutoCorrect|textCapSentences"
        android:layout_below="@id/entry_ip"/>
    <EditText
        android:id="@+id/entry_password"
        android:textSize="16sp"
        android:hint="@string/label_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword|textAutoCorrect|textCapSentences"
        android:layout_below="@id/entry_user_id"/>
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entry_password"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/cancel_button"/>
    <Button
        android:id="@+id/ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/cancel_button"
        android:layout_below="@id/entry_password"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/manage_server_valid"/>

</RelativeLayout>