<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:id="@+id/alert_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_label"
        android:padding="16dp"/>
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alert_label"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/cancel_button"/>
    <Button
        android:id="@+id/ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/cancel_button"
        android:layout_below="@id/alert_label"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/ok_button"/>
</RelativeLayout>