<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tuxremote.app.MainActivity" >

    <item
        android:id="@+id/sub"
        android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
        app:showAsAction="ifRoom"
        android:title=""
        >
        <menu>
            <item
                android:id="@+id/action_add_server"
                android:title="@string/action_add_server"
                android:orderInCategory="50"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/action_remove_all_server"
                android:title="@string/action_remove_all_server"
                android:orderInCategory="50"
                app:showAsAction="never"
                />
            <item android:id="@+id/action_settings"
                android:title="@string/action_settings"
                android:orderInCategory="100"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>

    <!-- app:actionProviderClass="com.tuxremote.app.GlobalAction" -->