<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <EditText
        android:id="@+id/entry_password"
        android:textSize="16sp"
        android:hint="@string/label_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword|textAutoCorrect|textCapSentences"/>
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entry_password"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:text="@string/cancel_button"/>
    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entry_password"
        android:layout_toRightOf="@id/cancel_button"
        android:layout_alignParentRight="true"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:text="@string/ok_button"/>
</RelativeLayout>